Fix search icon wrap

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -697,6 +697,7 @@ details.content-warning[open] summary.content-warning-notice:before {
 #search-input {
   width:90%;
   padding-left: 50px;
+  display:inline;
 }
 
 .search label
@@ -704,6 +705,7 @@ details.content-warning[open] summary.content-warning-notice:before {
   position:relative;
   left:40px;
   font-size:1.1em;
+  display:inline;
 }
 
 // Autocompletion styles
